[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/sidebar/direct/dm_list.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="dm_panel_bg"]
bg_color = Color(0.184, 0.192, 0.212, 1)

[node name="DMList" type="PanelContainer"]
custom_minimum_size = Vector2(240, 0)
offset_right = 240.0
offset_bottom = 600.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("dm_panel_bg")
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="SearchContainer" type="MarginContainer" parent="VBox"]
layout_mode = 2

[node name="Search" type="LineEdit" parent="VBox/SearchContainer"]
layout_mode = 2
placeholder_text = "Find or start a conversation"

[node name="HeaderMargin" type="MarginContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="HeaderRow" type="HBoxContainer" parent="VBox/HeaderMargin"]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="VBox/HeaderMargin/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "DIRECT MESSAGES"

[node name="NewGroupBtn" type="Button" parent="VBox/HeaderMargin/HeaderRow"]
layout_mode = 2
custom_minimum_size = Vector2(24, 24)
text = "+"
flat = true
tooltip_text = "New Group DM"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="DMVBox" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2
